# media-sort-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: debian.yml  rust.yml
debian/: changelog  control  copyright  rules
src/: config.rs  main.rs  mediainfo.rs  mediasort.rs  omdb.rs  tvmaze.rs
