[package]
name = "media-sort-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
anyhow = "1.0"
regex = "1.7"
serde_yaml = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = [ "std", "derive" ] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
structopt = "0.3"
libc = "0.2"
chrono = "0.4"
